# resume-parse

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: cli.rs  main.rs  parse.rs  print.rs
